fix: stabilize hose transfer and pipe accessories